force-app/main/default/objects/Protocolo__c/Protocolo__c.object-meta.xml
<CustomObject>
    <label>Protocolo</label>
    <nameField>
        <label>Protocolo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Protocolos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>