force-app/main/default/objects/Protocolo__c/fields/CallSourceId__c.field-meta.xml
<CustomField>
    <fullName>CallSourceId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Campo usado para receber o Id da ligação quando o protocolo é gerado por uma ligação na 55BPX</description>
    <externalId>true</externalId>
    <label>Id da Ligacao</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>