force-app/main/default/objects/Protocolo__c/fields/CallSourcePhone__c.field-meta.xml
<CustomField>
    <fullName>CallSourcePhone__c</fullName>
    <description>Campo utilizado para receber o telefone que gerou o protocolo, quando ele é criado por ligação pela 55BPX</description>
    <label>Telefone da Ligação</label>
    <length>15</length>
    <type>Text</type>
</CustomField>