force-app/main/default/objects/Protocolo__c/fields/IdCase__c.field-meta.xml
<CustomField>
    <fullName>IdCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Protocolos (Case)</relationshipLabel>
    <relationshipName>Protocolos1</relationshipName>
    <type>Lookup</type>
</CustomField>