force-app/main/default/objects/Protocolo__c/fields/IdProtocolo__c.field-meta.xml
<CustomField>
    <fullName>IdProtocolo__c</fullName>
    <displayFormat>{YYYY}{MM}{DD}{0000}</displayFormat>
    <label>Protocol Id</label>
    <type>AutoNumber</type>
</CustomField>