force-app/main/default/objects/Protocolo__c/fields/Mail_To_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Mail_To_Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mail To Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Protocolos (Mail To Case Id)</relationshipLabel>
    <relationshipName>Protocolos2</relationshipName>
    <type>Lookup</type>
</CustomField>