force-app/main/default/objects/Protocolo__c/fields/Messaging_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Session_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Messaging Session Id</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Protocolos</relationshipLabel>
    <relationshipName>Protocolos</relationshipName>
    <type>Lookup</type>
</CustomField>