force-app/main/default/objects/Protocolo__c/fields/ProtocolSource__c.field-meta.xml
<CustomField>
    <fullName>ProtocolSource__c</fullName>
    <label>Origem do Protocolo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integração 55PBX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>